[package]
name = "my_sonic_client"
version = "0.1.0"
authors = ["Cecilia Carneiro <cecilia.carneiroesilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"]}
futures = "0.3"
failure = "0.1"
bytes = "0.5.4"