[package]
name = "my_sonic_client"
version = "0.1.0"
authors = ["Cecilia Carneiro <cecilia.carneiroesilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"]}
futures = "0.3"
bytes = "0.5.4"
regex = "1"
lazy_static = "1.4"
atoi = "0.3.2"